--- a/css/style.css
+++ b/css/style.css
@@ -64,43 +64,6 @@ a:focus {
     border-color: #031540;
 }
 
-/* #loader {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #ffffff;
-    opacity: 0;
-    visibility: hidden;
-    -webkit-transition: opacity .3s ease-out, visibility 0s linear .3s;
-    -o-transition: opacity .3s ease-out, visibility 0s linear .3s;
-    transition: opacity .3s ease-out, visibility 0s linear .3s;
-    z-index: 999;
-}
-
-#loader.show {
-    -webkit-transition: opacity .6s ease-out, visibility 0s linear 0s;
-    -o-transition: opacity .6s ease-out, visibility 0s linear 0s;
-    transition: opacity .6s ease-out, visibility 0s linear 0s;
-    visibility: visible;
-    opacity: 1;
-}
-
-#loader .loader {
-    position: relative;
-    width: 45px;
-    height: 45px;
-    border: 5px solid #dddddd;
-    border-top: 5px solid #031540;
-    border-radius: 50%;
-    -webkit-animation: spin 2s linear infinite;
-    animation: spin 2s linear infinite;
-} */
-
 @-webkit-keyframes spin {
     0% {
         -webkit-transform: rotate(0deg);
@@ -733,7 +696,6 @@ a:focus {
         border-left: 5px solid #dddddd;
     }
 }
-
 /* Experience End */
 
 
@@ -915,7 +877,6 @@ a:focus {
     }
 }
 
-
 .portfolio #portfolio-filter {
     padding: 0;
     margin: -15px 0 25px 0;
@@ -1014,7 +975,7 @@ a:focus {
     border-color: #031540;
 }
 
-/* Portfolio Start */
+/* Portfolio End */
 
 /* Contact Start */
 .contact {
@@ -1100,6 +1061,7 @@ a:focus {
         width: 18rem;
     }
 }
+/* Contact End */
 
 
 /* Footer start */
