--- a/css/button.css
+++ b/css/button.css
@@ -31,3 +31,14 @@ background-color: #00abf0;
     text-align: center;
     }
 }
+
+.view-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.view-btn a{
+    margin-top: 28px;
+    text-transform: capitalize;
+}
