--- a/css/style.css
+++ b/css/style.css
@@ -227,181 +227,6 @@ span {
     margin: 2rem 0 3rem;
 }
 
-/* Skills Start */
-/* .skills {
-    background: aliceblue;
-} */
-
-/* .skills-container {
-    width: 600px;
-    height: 500px;
-    padding: 75px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    top: 115px;
-    left: -315px;
-} */
-
-/* .skills-bar {
-    position: relative;
-    top: -60px;
-} */
-
-/* .bar {
-    font-size: 23px;
-}
-
-.skills-bar .bar:first-child {
-    margin-top: 0;
-}
-
-.skills-bar .bar:last-child {
-    margin-bottom: 0;
-}
-
-.skills-bar .bar .info {
-    margin-bottom: 5px;
-}
-
-.skills-bar .bar .info span {
-    font-size: 17px;
-    font-weight: 500;
-    animation: showText .5s linear forwards;
-    opacity: 0;
-}
-
-.skills-bar .bar .progress-line {
-    position: relative;
-    border-radius: 10px;
-    width: 46rem;
-    height: 8px;
-    background-color: #000;
-    animation: animate 1s cubic-bezier(1, 0, 0.5, 1) forwards;
-    transform: scaleX(0);
-    transform-origin: left;
-    margin-bottom: 6px;
-}
-
-@keyframes animate {
-    100% {
-        transform: scaleX(1);
-    }
-}
-
-.skills-bar .progress-line span {
-    height: 100%;
-    background-color: var(--main-color);
-    position: absolute;
-    border-radius: 10px;
-    animation: animate 1s 1s cubic-bezier(1, 0, 0.5, 1) forwards;
-    transform: scaleX(0);
-    transform-origin: left;
-}
-
-.bxl-html5,
-.bxl-css3,
-.bxl-bootstrap,
-.bxl-tailwind-css,
-.fa-sass,
-.bxl-javascript,
-.fa-c {
-    font-size: 4rem;
-}
-
-.progress-line.html span {
-    width: 95%;
-}
-
-.progress-line.css span {
-    width: 90%;
-}
-
-.progress-line.bootstrap span {
-    width: 80%;
-}
-
-.progress-line.tailwind span {
-    width: 50%;
-}
-
-.progress-line.sass span {
-    width: 50%;
-}
-
-.progress-line.javascript span {
-    width: 60%;
-}
-
-.progress-line.c span {
-    width: 65%;
-}
-
-.progress-line span::after {
-    position: absolute;
-    padding: 1px 8px;
-    background-color: #000;
-    color: #fff;
-    font-size: 12px;
-    border-radius: 3px;
-    top: -28px;
-    right: -28px;
-    animation: showText .5s a.5s linear forwards;
-}
-
-.progress-line.html span::after {
-    content: "95%";
-}
-
-.progress-line.css span::after {
-    content: "90%";
-}
-
-.progress-line.bootstrap span::after {
-    content: "80%";
-}
-
-.progress-line.tailwind span::after {
-    content: "50%";
-}
-
-.progress-line.sass span::after {
-    content: "50%";
-}
-
-.progress-line.javascript span::after {
-    content: "60%";
-}
-
-.progress-line.c span::after {
-    content: "65%";
-}
-
-.progress-line span::before {
-    content: "";
-    position: absolute;
-    width: 0;
-    height: 0;
-    border: 7px solid transparent;
-    border-bottom-width: 0px;
-    border-right-width: 0px;
-    border-top-color: #000;
-    top: -10px;
-    right: 0;
-    animation: showText .5s 1.5s linear forwards;
-    opacity: 0;
-}
-
-@keyframes showText {
-    100% {
-        opacity: 1;
-    }
-} */
-
-/* Skills End */
-
-
 .services {
     background: var(--second-bg-color);
 }
@@ -614,7 +439,7 @@ span {
 
 .footer-text p {
     position: relative;
-    left: 25px;
+    /* left: 25px; */
     color: var(--text-color);
 }
 
